creating a express server and adding some middleware

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/yogesh2019/WebScrapper1222#readme",
   "dependencies": {
+    "express": "^4.18.2",
     "node": "^19.3.0"
   }
 }
